--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body
 .game__left,
 .game__right
 {
-	padding-top: 50px;
+	padding-top: 70px;
 	padding-bottom: 50px;
 	width: 50%;
 	height: 100%;
@@ -78,7 +78,7 @@ body
 }
 .game__input
 {
-	width: 250px;
+	width: 230px;
 	height: 50px;
 	outline: none;
 	padding: 5px 10px;
@@ -95,18 +95,22 @@ body
 }
 .game__start
 {
+	background: none;
+	border: none;
 	cursor: pointer;
 	font-size: 30px;
 	position: absolute;
-	top: 95px;
+	top: 115px;
 	left: 50%;
 	transform: translateX(-50%);
 	color: #de7575;
-	transition: 0.2s;
+	transition: all 0.2s;
+	outline: none;
 }
 .game__start:hover
 {
 	color: #EB4D4D;
+	transform: translateX(-50%) scale(1.1);
 }
 .game__team-balance
 {
@@ -138,6 +142,30 @@ body
 	background-color: #EB4D4D;
 	color: #fff;
 }
+.game__new
+{
+	position: absolute;
+	background: none;
+	top: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	border: none;
+	font-family: 'Lato';
+	font-weight: 300;
+	font-size: 18px;
+	text-transform: uppercase;
+	cursor: pointer;
+	font-weight: 200;
+	outline: none;
+}
+.game__new i
+{
+	margin-right: 10px;
+	color: #EB4D4D;
+	transition: margin 0.3s;
+}
+.game__new:hover { font-weight: 300; }
+.game__new:hover i { margin-right: 15px; }
 .game__winner
 {
 	width: 100%;
@@ -152,24 +180,20 @@ body
 @-webkit-keyframes shake
 {
 	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
-	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
 	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
-	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
-	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
-	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
-	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
-	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+	40% { -webkit-transform: translate(1px, -1px) rotate(-0.5deg); }
+	60% { -webkit-transform: translate(-3px, 1px) rotate(1deg); }
+	80% { -webkit-transform: translate(-1px, -1px) rotate(-0.5deg); }
+	100% { -webkit-transform: translate(1px, -2px) rotate(1deg); }
 }
 .game__panel.game__stopped
 {
 	-webkit-animation-name: shake;
-	-webkit-animation-duration: 0.8s;
+	-webkit-animation-duration: 0.5s;
 	-webkit-transform-origin:50% 50%;
-	-webkit-animation-timing-function: linear;
+	-webkit-animation-timing-function: ease-in;
 } 
+/***************************
 /* .game__title
 {
 	font-size: 48px;
