--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ body
 	display: flex;
 	z-index: 2;
 	background-color: #fff;
-	width: 70%;
+	max-width: 800px;
+	width: 100%;
 	height: 80%;
 	border-radius: 10px;
 	overflow: hidden;
